# xiaozhi-mcp

./: .env.example  .gitignore  mcp_config_example.json  pyproject.toml
xiaozhi-music-mcp/: music_mcp_server.py
