[project]
name = "mcp-calculator"
version = "0.2.0"
description = "MCP bridge for extending Xiaozhi AI capabilities"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.2.1",
    "websockets>=15.0.1",
    "mcp>=1.20.0",
    "pydantic>=2.12.3",
    "mcp-proxy>=0.10.0",
    "fastmcp>=2.13.0.2",
    "python-socks>=2.8.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
